Bug 1615977 - Don't modify key value while pressing a numpad key with `Alt` but the virtual keycode is a function key r=m_kato

Inputting Unicode scalar value with `Alt` + numpad keys is available even
without NumLock state.  However, `Alt` + function key on numpad should also
be worked because user may intent to perform it.  Therefore, this patch
stops the hacking for bug 1606655 when given virtual keycode value is a
function key, but this means that users cannot type a Unicode scalar value
without NumLock key state if the value includes `7` (`Home`),
`4` (`ArrowLeft`), `6` (`ArrowRight`) because Firefox UI handles they are
shortcut keys (for "Go home", "Go back" and "Go forward").  Unfortunately,
I have no idea how to solve this conflict (if it's second key or latter key
after pressing `Alt` key, we could do that with a boolean flag, but I don't
like to make it only for this kind of edge case unless a lot of users want
to do it).

Differential Revision: https://phabricator.services.mozilla.com/D63782

--HG--
extra : moz-landing-system : lando